--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
   
 {
     "manifest_version": 2,
-    "name": "presv-addon",
+    "name": "chrome-presv-addon",
     "version": "0.0.1",
     "description": "this addon is the web accessibility survey support.",
     "icons": {
